--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest --coverage",
     "test-ui": "vitest --ui"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/coverage-v8": "^3.1.4",
     "@vitest/ui": "^3.1.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
